stats text alignment corrected

--- a/game/HTML-JS/css/style.css
+++ b/game/HTML-JS/css/style.css
@@ -420,6 +420,11 @@ dialog span {
   padding-top: 15px;
   padding-left: 10px;
 }
+.textp{
+    text-align: left;
+  padding-bottom: 15px;
+  padding-left: 10px;
+}
 #consumed{
   text-align: start;
 }
